@@ -155,7 +155,7 @@ namespace std
        *  @brief  Assign elements to an array.
        *
        *  Assign elements of array to values in @a v.  Results are undefined
-       *  if @a v is not the same size as this array.
+       *  if @a v does not have the same size as this array.
        *
        *  @param  v  Valarray to get values from.
        */
@@ -174,7 +174,7 @@ namespace std
        *  @brief  Assign elements to an array subset.
        *
        *  Assign elements of array to values in @a sa.  Results are undefined
-       *  if @a sa is not the same size as this array.
+       *  if @a sa does not have the same size as this array.
        *
        *  @param  sa  Array slice to get values from.
        */
@@ -184,7 +184,7 @@ namespace std
        *  @brief  Assign elements to an array subset.
        *
        *  Assign elements of array to values in @a ga.  Results are undefined
-       *  if @a ga is not the same size as this array.
+       *  if @a ga does not have the same size as this array.
        *
        *  @param  ga  Array slice to get values from.
        */
@@ -194,7 +194,7 @@ namespace std
        *  @brief  Assign elements to an array subset.
        *
        *  Assign elements of array to values in @a ma.  Results are undefined
-       *  if @a ma is not the same size as this array.
+       *  if @a ma does not have the same size as this array.
        *
        *  @param  ma  Array slice to get values from.
        */
@@ -204,7 +204,7 @@ namespace std
        *  @brief  Assign elements to an array subset.
        *
        *  Assign elements of array to values in @a ia.  Results are undefined
-       *  if @a ia is not the same size as this array.
+       *  if @a ia does not have the same size as this array.
        *
        *  @param  ia  Array slice to get values from.
        */
@@ -231,8 +231,8 @@ namespace std
        *  @brief  Return an array subset.
        *
        *  Returns a new valarray containing the elements of the array
-       *  indicated by the slice argument.  The new valarray is the size of
-       *  the input slice.  @see slice.
+       *  indicated by the slice argument.  The new valarray has the same size
+       *  as the input slice.  @see slice.
        *
        *  @param  s  The source slice.
        *  @return  New valarray containing elements in @a s.
@@ -243,8 +243,8 @@ namespace std
        *  @brief  Return a reference to an array subset.
        *
        *  Returns a new valarray containing the elements of the array
-       *  indicated by the slice argument.  The new valarray is the size of
-       *  the input slice.  @see slice.
+       *  indicated by the slice argument.  The new valarray has the same size
+       *  as the input slice.  @see slice.
        *
        *  @param  s  The source slice.
        *  @return  New valarray containing elements in @a s.
@@ -266,8 +266,8 @@ namespace std
        *  @brief  Return a reference to an array subset.
        *
        *  Returns a new valarray containing the elements of the array
-       *  indicated by the gslice argument.  The new valarray is
-       *  the size of the input gslice.  @see gslice.
+       *  indicated by the gslice argument.  The new valarray has
+       *  the same size as the input gslice.  @see gslice.
        *
        *  @param  s  The source gslice.
        *  @return  New valarray containing elements in @a s.
@@ -448,8 +448,8 @@ namespace std
        *
        *  A new valarray is constructed as a copy of this array with elements
        *  in shifted positions.  For an element with index i, the new position
-       *  is i - n.  The new valarray is the same size as the current one.
-       *  New elements without a value are set to 0.  Elements whos new
+       *  is i - n.  The new valarray has the same size as the current one.
+       *  New elements without a value are set to 0.  Elements whose new
        *  position is outside the bounds of the array are discarded.
        *
        *  Positive arguments shift toward index 0, discarding elements [0, n).
@@ -465,7 +465,7 @@ namespace std
        *
        *  A new valarray is constructed as a copy of this array with elements
        *  in shifted positions.  For an element with index i, the new position
-       *  is (i - n) % size().  The new valarray is the same size as the
+       *  is (i - n) % size().  The new valarray has the same size as the
        *  current one.  Elements that are shifted beyond the array bounds are
        *  shifted into the other end of the array.  No elements are lost.
        *
@@ -482,7 +482,7 @@ namespace std
        *
        *  Returns a new valarray with elements assigned to the result of
        *  applying func to the corresponding element of this array.  The new
-       *  array is the same size as this one.
+       *  array has the same size as this one.
        *
        *  @param  func  Function of Tp returning Tp to apply.
        *  @return  New valarray with transformed elements.
@@ -494,7 +494,7 @@ namespace std
        *
        *  Returns a new valarray with elements assigned to the result of
        *  applying func to the corresponding element of this array.  The new
-       *  array is the same size as this one.
+       *  array has the same size as this one.
        *
        *  @param  func  Function of const Tp& returning Tp to apply.
        *  @return  New valarray with transformed elements.
@@ -504,7 +504,7 @@ namespace std
       /**
        *  @brief  Resize array.
        *
-       *  Resize this array to be @a size and set all elements to @a c.  All
+       *  Resize this array to @a size and set all elements to @a c.  All
        *  references and iterators are invalidated.
        *
        *  @param  size  New array size.
