@@ -1,3 +1,7 @@
+2005-07-28  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	* include/std/std_valarray.h: Fix grammar in comments.
+
 2005-07-25  Geoffrey Keating  <geoffk@apple.com>
 
 	* acinclude.m4 (GLIBCXX_ENABLE_SYMVERS): Handle darwin-export,
